# move-rokimania

./: .gitignore  README.md  docker-compose.yml  example.env
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 183d9c16da3c_.py  1abf5f3ed604_create_entry_models.py  60f1d5cfbd2b_create_user_model.py  aa5bc1cddb63_fix_holdentry_model.py
backend/src/: database.py  exceptions.py  main.py  models.py  settings.py
backend/src/tracker/: models.py  routes.py  schemas.py
backend/src/users/: auth.py  dependencies.py  exceptions.py  models.py  routes.py  schemas.py  service.py
frontend/: Dockerfile  entrypoint.sh  index.html
frontend/src/: next.config.ts  package-lock.json  package.json  type.ts
frontend/src/api/: baseAPI.ts  entriesAPI.ts  moveAPI.ts  type.ts  usersAPI.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: AuthForm.tsx  ClientEntries.tsx  EntryCard.tsx  EntryForm.tsx  EntryTable.tsx  EntryTypeSelect.tsx  ExerciseSelect.tsx  HoldEntryForm.tsx  Navigation.tsx  RepsEntryForm.tsx
frontend/src/context/: UserContext.tsx
frontend/src/core/: errors.ts  serverUtils.ts  utils.ts
frontend/src/hooks/: useUser.ts
frontend/src/public/: manifest.json
